showing total price

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <hr/>
             <div class="flex justify-between mt-1">
               <h1 class="font-medium">Total:</h1>
-              <p>$500</p>
+              <p id="total-price">0</p>
             </div>
           </div>
         </div>
